# draw_tree

./: .gitignore  README.md  drawtree.py  o.tex  pyproject.toml  q.tex  requirements.txt  setup.py  test_drawtree.py
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml
.github/workflows/: test.yml
games/: 2s2x2x2.ef  2smp.ef  Figure1.ef  MyTree1.ef  cent2.ef  crossing.ef  example.ef  oldex.ef  one_card_poker.ef  spec.ef  x1.ef
src/draw_tree/: __init__.py  cli.py  core.py
src/drawtree/: __init__.py  cli.py  core.py  engine.py
src/drawtree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/drawtree/data/: macros-drawtree.tex
tests/: test_default_layout.py  test_drawtree.py
tutorial/: basic_usage.ipynb
