[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawtree"
version = "1.1.0"
description = "Generate TikZ code for game trees from extensive form (.ef) files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Game Tree Drawing Project"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov"]
jupyter = ["jupyter", "jupyter-tikz"]

[project.scripts]
drawtree = "drawtree.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/drawtree"
Repository = "https://github.com/your-username/drawtree.git"
Issues = "https://github.com/your-username/drawtree/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drawtree = ["data/*.tex"]